@@ -5,6 +5,11 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - Don't crash open file list dialog on unsaved files or without files
       (SEWI)
     - Added a small survey for new Padre installation (SEWI)
+    - Resolved the clash between threads and SQLite by temporarily
+      disconnecting from SQLite during a thread spawn (ADAMK)
+    - Move the slave driver spawn into Padre::Startup, so that
+      we get much much smaller thread spawn memory penalty from the
+      interpreter copy (ADAMK)
 
 0.58 2010.03.08
     - Fixed "Open File In Existing Padre" for non-win32 (PDONELAN)
